k8s/go-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-service
spec:
  selector:
    app: go-rest
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
